fixed page alignment and header adjustments

--- a/src/MainPicture.css
+++ b/src/MainPicture.css
@@ -1,40 +1,42 @@
+.box {
+    width: 100%;
+    height: 586px;
+}
+
+
 .MainPicture{
     position: absolute;
-        top: 93px;
-        right:1px;
+        top: 0px;
+        right:0px;
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    padding-top:40.5%;
-    height:0px;
+    overflow: hidden;
+    height: inherit;
     border-bottom: solid 2px rgb(255, 233, 111);
+    text-align: center;
 }
+
 
 .MainPicture:hover{
     cursor: pointer;
 }
 
 .shown-pic{
+    object-fit: cover;
+    object-position: bottom;
     position: absolute;
-        bottom:0;
-        left:-28%;
-        right:0%;
-    width:150%;
-    height: auto;
+        top: calc(100% - 2000px);
+        left: calc(50% - 1025px);
+    width: 2000px;
     transform-origin: bottom center;
-    margin: auto;
 }
 
 .hidden-pic{
-    width:150%;
-    height:auto;
-    position:absolute;
-        bottom:0px;
-        left:-28%;
-        right:0%;
-    margin:auto;
+    object-fit: cover;
+    object-position: bottom;
+    position: absolute;
+        top: calc(100% - 2000px);
+        left: calc(50% - 1025px);
+    width: 2000px;
     transform: rotate(180deg);
     transform-origin: bottom center;
 }
